--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
     <link href="css/bootstrap.min.css" rel="stylesheet">
+    <title>Title</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <link href="forindex.css" rel="stylesheet">
-    <meta name="viewport" content="width=device-width, initial-scale-1, maximum-scale=1">
 </head>
 <body style="background-color: #F2F2F2;">
 
@@ -16,7 +16,7 @@
                     <img src="res/bootstrap-seeklogo.com.svg" alt="" width="30" height="24">
                 </a>
                 <a class="navbar-brand" href="index.html">
-                    Name of site
+                    Easy Everyday English
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -36,34 +36,51 @@
                             <a class="nav-link" href="#">Home</a>
                         </li>
                     </ul>
-                    <form class="d-flex">
-                        <button class="btn btn-danger me-2" type="button">
-                            Join us
+                    <div class="d-flex">
+                        <button class="btn btn-outline-warning me-2" type="button">
+                            Grammar course
                         </button>
-                    </form>
+                        <button class="btn btn-outline-warning me-2" type="button">
+                            Listening course
+                        </button>
+                    </div>
+
                 </div>
             </div>
         </nav>
     </header>
 
 
-    <main >
+    <main class="container" >
+        <div class="container2  d-flex flex-column align-items-center">
+            <h1 class="mt-2 mb-3 display-1 ">Studying english</h1>
 
-        <div class="container2 d-flex flex-column align-items-center">
-            <h1 class="mt-3">Studying english</h1>
-            <p class="mt-2">Put some text here, but I don't know what</p>
+            <p class="mt-3 text-dark fs-3 w-75">Put some text here, but I don't know what</p>
+
         </div>
 
-        <div class="container d-flex flex-row justify-content-center mt-3">
-            <div class="container m-2 p-3" style="background-color: #F2B705;">
-                <div class="container">
-                    <h2>Reading course</h2>
-                </div>
-                <div class="accordion" id="accordionPanelsStayOpenExample">
+        <div class="container-md d-flex flex-column mt-3 justify-content-center">
+
+            <div class="container">
+                <h2>
+                    <a class="btn btn-lg btn-warning fs-1 " href="index.html">Grammar course</a>
+                </h2>
+                <p class="lead">Here something about grammar cours
+                </p>
+                <ul class="list-group-flush w-75" >
+                    <li>text</li>
+                    <li>grammar exercise</li>
+                    <li>new words</li>
+                    <li>work with text</li>
+                </ul>
+            </div>
+            <div class="container p-3" style="background-color: #F2B705;">
+
+                <div class="accordion accordion-flush" id="accordionPanelsStayOpenExample">
 
                     <div class="accordion-item">
                         <h2 class="accordion-header" id="panelsStayOpen-headingOne">
-                            <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseOne"  aria-controls="panelsStayOpen-collapseOne">
+                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseOne"  aria-controls="panelsStayOpen-collapseOne">
                                 <div class="d-flex flex-column">
                                     <div class="container">
                                         <img src="res/battery-half.svg">
@@ -117,7 +134,7 @@
 
                     <div class="accordion-item mt-2">
                         <h2 class="accordion-header" id="panelsStayOpen-heading2">
-                            <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapse2" aria-expanded="true" aria-controls="panelsStayOpen-collapse2">
+                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapse2" aria-expanded="true" aria-controls="panelsStayOpen-collapse2">
                                 <div class="d-flex flex-column">
                                     <div class="container">
                                         <img src="res/bicycle.svg">
@@ -171,7 +188,7 @@
 
                     <div class="accordion-item mt-2">
                         <h2 class="accordion-header" id="panelsStayOpen-heading4">
-                            <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapse4" aria-expanded="true" aria-controls="panelsStayOpen-collapse4">
+                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapse4" aria-expanded="true" aria-controls="panelsStayOpen-collapse4">
                                 <div class="d-flex flex-column">
                                     <div class="container">
                                         <img src="res/book.svg">
@@ -227,16 +244,27 @@
                 </div>
             </div>
 
-            <div class="container m-2 p-3" style="background-color: #038C5A;">
-                <div class="container">
-                    <h2>Listening course</h2>
-                </div>
+            <div class="container">
+                <h2 class="mt-5">
+                    <a class="btn btn-lg btn-success fs-1" href="index.html">Listening course</a>
+                </h2>
+                <p class="lead">Here something about grammar cours</p>
+                <ul>
+                    <li>fitsr advantige</li>
+                    <li>fitsr advantige</li>
+                    <li>fitsr advantige</li>
+                    <li>fitsr advantige</li>
+                </ul>
+            </div>
+        </div>
 
-                <div class="accordion" id="accordionPanelsStayOpenExample2">
+        <div class="container">
+            <div class="container p-3 mt-1 " style="background-color: #038C5A;">
+                <div class="accordion accordion-flush" id="accordionPanelsStayOpenExample2">
 
                     <div class="accordion-item">
                         <h2 class="accordion-header" id="panelsStayOpen-headingTwo">
-                            <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseTwo" aria-expanded="true" aria-controls="panelsStayOpen-collapseTwo">
+                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseTwo" aria-expanded="true" aria-controls="panelsStayOpen-collapseTwo">
                                 <div class="d-flex flex-column">
                                     <div class="container">
                                         <img src="res/battery-half.svg">
@@ -290,7 +318,7 @@
 
                     <div class="accordion-item mt-2">
                         <h2 class="accordion-header" id="panelsStayOpen-heading3">
-                            <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapse3" aria-expanded="true" aria-controls="panelsStayOpen-collapse3">
+                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapse3" aria-expanded="true" aria-controls="panelsStayOpen-collapse3">
                                 <div class="d-flex flex-column">
                                     <div class="container">
                                         <img src="res/bicycle.svg">
@@ -344,7 +372,7 @@
 
                     <div class="accordion-item mt-2">
                         <h2 class="accordion-header" id="panelsStayOpen-heading5">
-                            <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapse5" aria-expanded="true" aria-controls="panelsStayOpen-collapse5">
+                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapse5" aria-expanded="true" aria-controls="panelsStayOpen-collapse5">
                                 <div class="d-flex flex-column">
                                     <div class="container">
                                         <img src="res/book.svg">
@@ -400,6 +428,7 @@
 
             </div>
         </div>
+        </div>
 
     </main>
 
@@ -411,7 +440,7 @@
                 <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">About us</a></li>
 
             </ul>
-            <p class="text-center text-muted">&copy; 2022 Kovalev and solves, Inc</p>
+            <p class="text-center text-muted">&copy; 2022 Kovalev, Inc</p>
         </footer>
     </div>
 
