--- a/index.html
+++ b/index.html
@@ -24,25 +24,22 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav me-auto mb-2 mb-md-0">
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Home</a>
+                            <a class="nav-link active" href="#">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Home</a>
+                            <a class="nav-link" href="#">News</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Home</a>
+                            <a class="nav-link" href="#">Article</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Home</a>
+                            <a class="nav-link" href="#">About us</a>
                         </li>
                     </ul>
                     <div class="d-flex">
-                        <button class="btn btn-outline-warning me-2" type="button">
-                            Grammar course
-                        </button>
-                        <button class="btn btn-outline-warning me-2" type="button">
-                            Listening course
-                        </button>
+                        <a class="btn  btn-outline-warning me-2 " href="grammar.html">Grammar course</a>
+                        <a class="btn  btn-outline-warning me-2 " href="grammar.html">Listening course</a>
+
                     </div>
 
                 </div>
@@ -63,7 +60,7 @@
 
             <div class="container">
                 <h2>
-                    <a class="btn btn-lg btn-warning fs-1 " href="index.html">Grammar course</a>
+                    <a class="btn btn-lg btn-warning fs-1 " href="grammar.html">Grammar course</a>
                 </h2>
                 <p class="lead">Here something about grammar cours
                 </p>
@@ -74,7 +71,7 @@
                     <li>work with text</li>
                 </ul>
             </div>
-            <div class="container p-3" style="background-color: #F2B705;">
+            <div class="container p-3 rounded-3" style="background-color: #F2B705;">
 
                 <div class="accordion accordion-flush" id="accordionPanelsStayOpenExample">
 
@@ -259,7 +256,7 @@
         </div>
 
         <div class="container">
-            <div class="container p-3 mt-1 " style="background-color: #038C5A;">
+            <div class="container p-3 mt-1 rounded-3 " style="background-color: #038C5A;">
                 <div class="accordion accordion-flush" id="accordionPanelsStayOpenExample2">
 
                     <div class="accordion-item">
@@ -436,11 +433,12 @@
         <footer class="py-3 my-4">
             <ul class="nav justify-content-center border-bottom pb-3 mb-3">
                 <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Home</a></li>
-                <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Features</a></li>
+                <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">News</a></li>
+                <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Articles</a></li>
                 <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">About us</a></li>
 
             </ul>
-            <p class="text-center text-muted">&copy; 2022 Kovalev, Inc</p>
+            <p class="text-center text-muted">&copy; 2022 Easy Everyday English</p>
         </footer>
     </div>
 
