--- a/grammar.html
+++ b/grammar.html
@@ -7,7 +7,7 @@
     <link href="forindex.css" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale-1, maximum-scale=1">
 </head>
-<body>
+<body style="background-color: #F2F2F2;">
 
 <header>
     <nav class="navbar navbar-expand-md fixed-top navbar-light" style="background-color: #F2B705;">
@@ -69,7 +69,7 @@
         </p>
     </div>
 
-    <div class="container p-3 rounded-3 bg-info bg-opacity-50">
+    <div class="container p-3 rounded-3 m-1" style="background-color: #556FE6">
 
         <div class="accordion accordion-flush" id="accordionPanelsStayOpenExample">
 
