--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav me-auto mb-2 mb-md-0">
                         <li class="nav-item">
-                            <a class="nav-link active" href="#">Home</a>
+                            <a class="nav-link active" href="index.html">Home</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#">News</a>
@@ -38,7 +38,7 @@
                     </ul>
                     <div class="d-flex">
                         <a class="btn  btn-outline-warning me-2 " href="grammar.html">Grammar course</a>
-                        <a class="btn  btn-outline-warning me-2 " href="grammar.html">Listening course</a>
+                        <a class="btn  btn-outline-warning me-2 " href="listerning.html">Listening course</a>
 
                     </div>
 
@@ -243,7 +243,7 @@
 
             <div class="container">
                 <h2 class="mt-5">
-                    <a class="btn btn-lg btn-success fs-1" href="index.html">Listening course</a>
+                    <a class="btn btn-lg btn-success fs-1" href="listerning.html">Listening course</a>
                 </h2>
                 <p class="lead">Here something about grammar cours</p>
                 <ul>
@@ -432,7 +432,7 @@
     <div class="container mt-3">
         <footer class="py-3 my-4">
             <ul class="nav justify-content-center border-bottom pb-3 mb-3">
-                <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Home</a></li>
+                <li class="nav-item"><a href="index.html" class="nav-link px-2 text-muted">Home</a></li>
                 <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">News</a></li>
                 <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Articles</a></li>
                 <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">About us</a></li>
