--- a/listerning.html
+++ b/listerning.html
@@ -10,7 +10,7 @@
 <body style="background-color: #F2F2F2;">
 
 <header>
-    <nav class="navbar navbar-expand-md fixed-top navbar-light" style="background-color: #F2B705;">
+    <nav class="navbar navbar-expand-md fixed-top navbar-dark" style="background-color: #E66F55;">
         <div class="container-fluid">
             <a class="navbar-brand" href="index.html">
                 <img src="res/bootstrap-seeklogo.com.svg" alt="" width="30" height="24">
@@ -37,8 +37,8 @@
                     </li>
                 </ul>
                 <div class="d-flex">
-                    <a class="btn  btn-outline-success me-2 " href="grammar.html">Grammar course</a>
-                    <a class="btn  btn-outline-success me-2 " href="listerning.html">Listening course</a>
+                    <a class="btn  btn-outline-light me-2 " href="grammar.html">Grammar course</a>
+                    <a class="btn  btn-outline-light me-2 " href="listerning.html">Listening course</a>
 
                 </div>
 
@@ -48,28 +48,27 @@
 </header>
 
 <main>
-
     <div class="container2">
         <div class="container">
             <nav style="--bs-breadcrumb-divider: '>';" aria-label="breadcrumb">
                 <ol class="breadcrumb">
                     <li class="breadcrumb-item"><a href="index.html">Home</a></li>
-                    <li class="breadcrumb-item active" aria-current="page">Grammar course</li>
+                    <li class="breadcrumb-item active" aria-current="page">Listening course</li>
                 </ol>
             </nav>
         </div>
     </div>
 
     <div class="container">
-        <h1 class="display-1 text-center">Grammar course</h1>
+        <h1 class="display-1 text-center">Listening course</h1>
     </div>
 
     <div class="container mt-4 text-center">
-        <p class="lead">Here something about grammar course
+        <p class="lead">Here something about Listening course
         </p>
     </div>
 
-    <div class="container p-3 rounded-3" style="background-color: #556FE6">
+    <div class="container p-3 rounded-3" style="background-color: #55E6B1">
 
         <div class="accordion accordion-flush" id="accordionPanelsStayOpenExample">
 
@@ -239,6 +238,7 @@
         </div>
     </div>
 
+
     <div class="container mt-3">
         <nav style="--bs-breadcrumb-divider: '>';" aria-label="breadcrumb">
             <ol class="breadcrumb">
@@ -247,6 +247,8 @@
             </ol>
         </nav>
     </div>
+
+
 
     <div class="container mt-3">
         <footer class="py-3 my-4">
@@ -263,6 +265,7 @@
 
 
 </main>
+
 
 
 <script src="js/bootstrap.bundle.min.js"></script>
