--- a/grammar.html
+++ b/grammar.html
@@ -24,7 +24,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav me-auto mb-2 mb-md-0">
                     <li class="nav-item">
-                        <a class="nav-link active" href="index.html">Home</a>
+                        <a class="nav-link" href="index.html">Home</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">News</a>
@@ -89,7 +89,7 @@
                         </div>
                     </button>
                 </h2>
-                <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingOne">
+                <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse show" aria-labelledby="panelsStayOpen-headingOne">
                     <div class="accordion-body">
                         <ul class="list-group">
                             <a href="#" class="list-group-item list-group-item-action " aria-current="false">
@@ -143,7 +143,7 @@
                         </div>
                     </button>
                 </h2>
-                <div id="panelsStayOpen-collapse2" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-heading2">
+                <div id="panelsStayOpen-collapse2" class="accordion-collapse collapse show" aria-labelledby="panelsStayOpen-heading2">
                     <div class="accordion-body">
                         <ul class="list-group">
                             <a href="#" class="list-group-item list-group-item-action " aria-current="false">
@@ -197,7 +197,7 @@
                         </div>
                     </button>
                 </h2>
-                <div id="panelsStayOpen-collapse4" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-heading4">
+                <div id="panelsStayOpen-collapse4" class="accordion-collapse collapse show" aria-labelledby="panelsStayOpen-heading4">
                     <div class="accordion-body">
                         <ul class="list-group">
                             <a href="#" class="list-group-item list-group-item-action " aria-current="false">
