--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <div class="container2  d-flex flex-column align-items-center">
             <h1 class="mt-2 mb-3 display-1 ">Studying english</h1>
 
-            <p class="mt-3 text-dark fs-3 w-75">Put some text here, but I don't know what</p>
+            <p class="mt-3 text-dark fs-3 w-75">Are you ready to begin to learn english. That's much more essayer than you think</p>
 
         </div>
 
