--- a/grammar.html
+++ b/grammar.html
@@ -92,10 +92,10 @@
                 <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse show" aria-labelledby="panelsStayOpen-headingOne">
                     <div class="accordion-body">
                         <ul class="list-group">
-                            <a href="#" class="list-group-item list-group-item-action " aria-current="false">
+                            <a href="grammar/elementary/lesson1.html" class="list-group-item list-group-item-action " aria-current="false">
                                 <div class="ms-2 me-auto">
                                     <div class="fw-bold">Lesson 1</div>
-                                    The story about my life
+                                    London
                                 </div>
                             </a>
                             <a href="#" class="list-group-item list-group-item-action " aria-current="false">
