--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <div class="container2  d-flex flex-column align-items-center">
             <h1 class="mt-2 mb-3 display-1 ">Studying english</h1>
 
-            <p class="mt-3 text-dark fs-3 w-75">Are you ready to begin to learn english. That's much more essayer than you think</p>
+            <p class="mt-3 text-dark fs-2 w-75 fw-light">Are you ready to begin to learn english. That's much more essayer than you think</p>
 
         </div>
 
@@ -62,14 +62,9 @@
                 <h2>
                     <a class="btn btn-lg btn-warning fs-1 " href="grammar.html">Grammar course</a>
                 </h2>
-                <p class="lead">Here something about grammar cours
+                <p class="fs-4 fw-light">There are a lot of interesting <strong>text</strong> and <strong>grammar exercises</strong>. You can find <strong>new words</strong> and <strong>grammar constructions</strong>
                 </p>
-                <ul class="list-group-flush w-75" >
-                    <li>text</li>
-                    <li>grammar exercise</li>
-                    <li>new words</li>
-                    <li>work with text</li>
-                </ul>
+
             </div>
             <div class="container p-3 rounded-3" style="background-color: #F2B705;">
 
@@ -245,13 +240,9 @@
                 <h2 class="mt-5">
                     <a class="btn btn-lg btn-success fs-1" href="listerning.html">Listening course</a>
                 </h2>
-                <p class="lead">Here something about grammar cours</p>
-                <ul>
-                    <li>fitsr advantige</li>
-                    <li>fitsr advantige</li>
-                    <li>fitsr advantige</li>
-                    <li>fitsr advantige</li>
-                </ul>
+                <p class="fs-4 fw-light">There are a lot of interesting <strong>text</strong> and <strong>grammar exercises</strong>. You can find <strong>new words</strong> and <strong>grammar constructions</strong>
+                </p>
+
             </div>
         </div>
 
