--- a/listerning.html
+++ b/listerning.html
@@ -72,9 +72,9 @@
 
         <div class="accordion accordion-flush" id="accordionPanelsStayOpenExample">
 
-            <div class="accordion-item">
-                <h2 class="accordion-header" id="panelsStayOpen-headingOne">
-                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseOne"  aria-controls="panelsStayOpen-collapseOne">
+            <div class="accordion-item" >
+                <h2 class="accordion-header"  id="panelsStayOpen-headingOne">
+                    <button class="accordion-button collapsed " style="background-color: #E66F55;"  type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseOne"  aria-controls="panelsStayOpen-collapseOne">
                         <div class="d-flex flex-column">
                             <div class="container">
                                 <img src="res/battery-half.svg">
@@ -91,31 +91,31 @@
                 <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse show" aria-labelledby="panelsStayOpen-headingOne">
                     <div class="accordion-body">
                         <ul class="list-group">
-                            <a href="#" class="list-group-item list-group-item-action " aria-current="false">
+                            <a href="#" class="list-group-item list-group-item-action list-group-item-secondary" aria-current="false">
                                 <div class="ms-2 me-auto">
                                     <div class="fw-bold">Lesson 1</div>
                                     The story about my life
                                 </div>
                             </a>
-                            <a href="#" class="list-group-item list-group-item-action " aria-current="false">
+                            <a href="#" class="list-group-item list-group-item-action list-group-item-secondary"  aria-current="false">
                                 <div class="ms-2 me-auto">
                                     <div class="fw-bold">Lesson 2</div>
                                     Convection
                                 </div>
                             </a>
-                            <a href="#" class="list-group-item list-group-item-action " aria-current="false">
+                            <a href="#" class="list-group-item list-group-item-action list-group-item-secondary"  aria-current="false">
                                 <div class="ms-2 me-auto">
                                     <div class="fw-bold">Lesson 3</div>
                                     Real estimable
                                 </div>
                             </a>
-                            <a href="#" class="list-group-item list-group-item-action " aria-current="false">
+                            <a href="#" class="list-group-item list-group-item-action list-group-item-secondary"  aria-current="false">
                                 <div class="ms-2 me-auto">
                                     <div class="fw-bold">Lesson 4</div>
                                     Private conversation
                                 </div>
                             </a>
-                            <a href="#" class="list-group-item list-group-item-action " aria-current="false">
+                            <a href="#" class="list-group-item list-group-item-action list-group-item-secondary"  aria-current="false">
                                 <div class="ms-2 me-auto">
                                     <div class="fw-bold">Lesson 5</div>
                                     No one know who
@@ -128,7 +128,7 @@
 
             <div class="accordion-item mt-2">
                 <h2 class="accordion-header" id="panelsStayOpen-heading2">
-                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapse2" aria-expanded="true" aria-controls="panelsStayOpen-collapse2">
+                    <button class="accordion-button collapsed" style="background-color: #E66F55;" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapse2" aria-expanded="true" aria-controls="panelsStayOpen-collapse2">
                         <div class="d-flex flex-column">
                             <div class="container">
                                 <img src="res/bicycle.svg">
@@ -145,31 +145,31 @@
                 <div id="panelsStayOpen-collapse2" class="accordion-collapse collapse show" aria-labelledby="panelsStayOpen-heading2">
                     <div class="accordion-body">
                         <ul class="list-group">
-                            <a href="#" class="list-group-item list-group-item-action " aria-current="false">
+                            <a href="#" class="list-group-item list-group-item-action list-group-item-secondary" aria-current="false">
                                 <div class="ms-2 me-auto">
                                     <div class="fw-bold">Lesson 1</div>
                                     The story about my life
                                 </div>
                             </a>
-                            <a href="#" class="list-group-item list-group-item-action " aria-current="false">
+                            <a href="#" class="list-group-item list-group-item-action list-group-item-secondary" aria-current="false">
                                 <div class="ms-2 me-auto">
                                     <div class="fw-bold">Lesson 2</div>
                                     Convection
                                 </div>
                             </a>
-                            <a href="#" class="list-group-item list-group-item-action " aria-current="false">
+                            <a href="#" class="list-group-item list-group-item-action list-group-item-secondary" aria-current="false">
                                 <div class="ms-2 me-auto">
                                     <div class="fw-bold">Lesson 3</div>
                                     Real estimable
                                 </div>
                             </a>
-                            <a href="#" class="list-group-item list-group-item-action " aria-current="false">
+                            <a href="#" class="list-group-item list-group-item-action list-group-item-secondary" aria-current="false">
                                 <div class="ms-2 me-auto">
                                     <div class="fw-bold">Lesson 4</div>
                                     Private conversation
                                 </div>
                             </a>
-                            <a href="#" class="list-group-item list-group-item-action " aria-current="false">
+                            <a href="#" class="list-group-item list-group-item-action list-group-item-secondary" aria-current="false">
                                 <div class="ms-2 me-auto">
                                     <div class="fw-bold">Lesson 5</div>
                                     No one know who
@@ -182,7 +182,7 @@
 
             <div class="accordion-item mt-2">
                 <h2 class="accordion-header" id="panelsStayOpen-heading4">
-                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapse4" aria-expanded="true" aria-controls="panelsStayOpen-collapse4">
+                    <button class="accordion-button collapsed" style="background-color: #E66F55;" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapse4" aria-expanded="true" aria-controls="panelsStayOpen-collapse4">
                         <div class="d-flex flex-column">
                             <div class="container">
                                 <img src="res/book.svg">
@@ -198,32 +198,32 @@
                 </h2>
                 <div id="panelsStayOpen-collapse4" class="accordion-collapse collapse show" aria-labelledby="panelsStayOpen-heading4">
                     <div class="accordion-body">
-                        <ul class="list-group">
-                            <a href="#" class="list-group-item list-group-item-action " aria-current="false">
+                        <ul class="list-group ">
+                            <a href="#" class="list-group-item list-group-item-action list-group-item-secondary" aria-current="false">
                                 <div class="ms-2 me-auto">
                                     <div class="fw-bold">Lesson 1</div>
                                     The story about my life
                                 </div>
                             </a>
-                            <a href="#" class="list-group-item list-group-item-action " aria-current="false">
+                            <a href="#" class="list-group-item list-group-item-action list-group-item-secondary" aria-current="false">
                                 <div class="ms-2 me-auto">
                                     <div class="fw-bold">Lesson 2</div>
                                     Convection
                                 </div>
                             </a>
-                            <a href="#" class="list-group-item list-group-item-action " aria-current="false">
+                            <a href="#" class="list-group-item list-group-item-action list-group-item-secondary" aria-current="false">
                                 <div class="ms-2 me-auto">
                                     <div class="fw-bold">Lesson 3</div>
                                     Real estimable
                                 </div>
                             </a>
-                            <a href="#" class="list-group-item list-group-item-action " aria-current="false">
+                            <a href="#" class="list-group-item list-group-item-action list-group-item-secondary" aria-current="false">
                                 <div class="ms-2 me-auto">
                                     <div class="fw-bold">Lesson 4</div>
                                     Private conversation
                                 </div>
                             </a>
-                            <a href="#" class="list-group-item list-group-item-action " aria-current="false">
+                            <a href="#" class="list-group-item list-group-item-action list-group-item-secondary " aria-current="false">
                                 <div class="ms-2 me-auto">
                                     <div class="fw-bold">Lesson 5</div>
                                     No one know who
