--- a/grammar.html
+++ b/grammar.html
@@ -71,11 +71,11 @@
 
     <div class="container p-3 rounded-3" style="background-color: #556FE6">
 
-        <div class="accordion accordion-flush" id="accordionPanelsStayOpenExample">
+        <div class="accordion accordion-flush"  id="accordionPanelsStayOpenExample">
 
-            <div class="accordion-item">
+            <div class="accordion-item" >
                 <h2 class="accordion-header" id="panelsStayOpen-headingOne">
-                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseOne"  aria-controls="panelsStayOpen-collapseOne">
+                    <button class="accordion-button collapsed bg-secondary bg-opacity-25"  type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseOne"  aria-controls="panelsStayOpen-collapseOne">
                         <div class="d-flex flex-column">
                             <div class="container">
                                 <img src="res/battery-half.svg">
@@ -129,7 +129,7 @@
 
             <div class="accordion-item mt-2">
                 <h2 class="accordion-header" id="panelsStayOpen-heading2">
-                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapse2" aria-expanded="true" aria-controls="panelsStayOpen-collapse2">
+                    <button class="accordion-button collapsed bg-secondary bg-opacity-25" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapse2" aria-expanded="true" aria-controls="panelsStayOpen-collapse2">
                         <div class="d-flex flex-column">
                             <div class="container">
                                 <img src="res/bicycle.svg">
@@ -183,7 +183,7 @@
 
             <div class="accordion-item mt-2">
                 <h2 class="accordion-header" id="panelsStayOpen-heading4">
-                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapse4" aria-expanded="true" aria-controls="panelsStayOpen-collapse4">
+                    <button class="accordion-button collapsed bg-secondary bg-opacity-25" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapse4" aria-expanded="true" aria-controls="panelsStayOpen-collapse4">
                         <div class="d-flex flex-column">
                             <div class="container">
                                 <img src="res/book.svg">
