--- a/index.html
+++ b/index.html
@@ -52,21 +52,22 @@
         <div class="container2  d-flex flex-column align-items-center">
             <h1 class="mt-2 mb-3 display-1 ">Studying english</h1>
 
-            <p class="mt-3 text-dark fs-2 w-75 fw-light">Are you ready to begin to learn english. That's much more essayer than you think</p>
-
         </div>
 
         <div class="container-md d-flex flex-column mt-3 justify-content-center">
 
-            <div class="container">
+            <div class="container border border-top border-2 p-1">
                 <h2>
-                    <a class="btn btn-lg btn-warning fs-1 " href="grammar.html">Grammar course</a>
+                    Grammar course
                 </h2>
                 <p class="fs-4 fw-light">There are a lot of interesting <strong>text</strong> and <strong>grammar exercises</strong>. You can find <strong>new words</strong> and <strong>grammar constructions</strong>
                 </p>
+                <div class="container text-end">
+                    <a class="btn btn-lg btn-warning " href="grammar.html">start</a>
+                </div>
 
             </div>
-            <div class="container p-3 rounded-3" style="background-color: #F2B705;">
+            <div class="container p-3 rounded-3 mt-2" style="background-color: #F2B705;">
 
                 <div class="accordion accordion-flush" id="accordionPanelsStayOpenExample">
 
@@ -236,12 +237,16 @@
                 </div>
             </div>
 
-            <div class="container">
+            <div class="container border m-2 p-1">
                 <h2 class="mt-5">
-                    <a class="btn btn-lg btn-success fs-1" href="listerning.html">Listening course</a>
+                    Listening course
                 </h2>
                 <p class="fs-4 fw-light">There are a lot of interesting <strong>text</strong> and <strong>grammar exercises</strong>. You can find <strong>new words</strong> and <strong>grammar constructions</strong>
                 </p>
+
+                <div class="container text-end">
+                    <a class="btn btn-lg btn-success" href="listerning.html">start</a>
+                </div>
 
             </div>
         </div>
