--- a/grammar.html
+++ b/grammar.html
@@ -10,7 +10,7 @@
 <body style="background-color: #F2F2F2;">
 
 <header>
-    <nav class="navbar navbar-expand-md fixed-top navbar-light" style="background-color: #F2B705;">
+    <nav class="navbar navbar-expand-md fixed-top navbar-dark" style="background-color: #025939;">
         <div class="container-fluid">
             <a class="navbar-brand" href="index.html">
                 <img src="res/bootstrap-seeklogo.com.svg" alt="" width="30" height="24">
@@ -37,8 +37,8 @@
                     </li>
                 </ul>
                 <div class="d-flex">
-                    <a class="btn  btn-outline-success me-2 " href="grammar.html">Grammar course</a>
-                    <a class="btn  btn-outline-success me-2 " href="listerning.html">Listening course</a>
+                    <a class="btn  btn-outline-warning me-2 " href="grammar.html">Grammar course</a>
+                    <a class="btn  btn-outline-warning me-2 " href="listerning.html">Listening course</a>
 
                 </div>
 
@@ -69,7 +69,7 @@
         </p>
     </div>
 
-    <div class="container p-3 rounded-3" style="background-color: #556FE6">
+    <div class="container p-3 rounded-3" style="background-color: #F2B705;">
 
         <div class="accordion accordion-flush"  id="accordionPanelsStayOpenExample">
 
