--- a/listerning.html
+++ b/listerning.html
@@ -10,7 +10,7 @@
 <body style="background-color: #F2F2F2;">
 
 <header>
-    <nav class="navbar navbar-expand-md fixed-top navbar-dark" style="background-color: #E66F55;">
+    <nav class="navbar navbar-expand-md fixed-top navbar-dark" style="background-color: #025939;">
         <div class="container-fluid">
             <a class="navbar-brand" href="index.html">
                 <img src="res/bootstrap-seeklogo.com.svg" alt="" width="30" height="24">
@@ -37,8 +37,8 @@
                     </li>
                 </ul>
                 <div class="d-flex">
-                    <a class="btn  btn-outline-light me-2 " href="grammar.html">Grammar course</a>
-                    <a class="btn  btn-outline-light me-2 " href="listerning.html">Listening course</a>
+                    <a class="btn  btn-outline-warning me-2 " href="grammar.html">Grammar course</a>
+                    <a class="btn  btn-outline-warning me-2 " href="listerning.html">Listening course</a>
 
                 </div>
 
@@ -68,13 +68,13 @@
         </p>
     </div>
 
-    <div class="container p-3 rounded-3" style="background-color: #55E6B1">
+    <div class="container p-3 rounded-3" style="background-color: #025939">
 
         <div class="accordion accordion-flush" id="accordionPanelsStayOpenExample">
 
             <div class="accordion-item" >
                 <h2 class="accordion-header"  id="panelsStayOpen-headingOne">
-                    <button class="accordion-button collapsed " style="background-color: #E66F55;"  type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseOne"  aria-controls="panelsStayOpen-collapseOne">
+                    <button class="accordion-button collapsed bg-secondary bg-opacity-25 "  type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseOne"  aria-controls="panelsStayOpen-collapseOne">
                         <div class="d-flex flex-column">
                             <div class="container">
                                 <img src="res/battery-half.svg">
@@ -91,31 +91,31 @@
                 <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse show" aria-labelledby="panelsStayOpen-headingOne">
                     <div class="accordion-body">
                         <ul class="list-group">
-                            <a href="#" class="list-group-item list-group-item-action list-group-item-secondary" aria-current="false">
+                            <a href="#" class="list-group-item list-group-item-action " aria-current="false">
                                 <div class="ms-2 me-auto">
                                     <div class="fw-bold">Lesson 1</div>
                                     The story about my life
                                 </div>
                             </a>
-                            <a href="#" class="list-group-item list-group-item-action list-group-item-secondary"  aria-current="false">
+                            <a href="#" class="list-group-item list-group-item-action "  aria-current="false">
                                 <div class="ms-2 me-auto">
                                     <div class="fw-bold">Lesson 2</div>
                                     Convection
                                 </div>
                             </a>
-                            <a href="#" class="list-group-item list-group-item-action list-group-item-secondary"  aria-current="false">
+                            <a href="#" class="list-group-item list-group-item-action "  aria-current="false">
                                 <div class="ms-2 me-auto">
                                     <div class="fw-bold">Lesson 3</div>
                                     Real estimable
                                 </div>
                             </a>
-                            <a href="#" class="list-group-item list-group-item-action list-group-item-secondary"  aria-current="false">
+                            <a href="#" class="list-group-item list-group-item-action "  aria-current="false">
                                 <div class="ms-2 me-auto">
                                     <div class="fw-bold">Lesson 4</div>
                                     Private conversation
                                 </div>
                             </a>
-                            <a href="#" class="list-group-item list-group-item-action list-group-item-secondary"  aria-current="false">
+                            <a href="#" class="list-group-item list-group-item-action "  aria-current="false">
                                 <div class="ms-2 me-auto">
                                     <div class="fw-bold">Lesson 5</div>
                                     No one know who
@@ -128,7 +128,7 @@
 
             <div class="accordion-item mt-2">
                 <h2 class="accordion-header" id="panelsStayOpen-heading2">
-                    <button class="accordion-button collapsed" style="background-color: #E66F55;" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapse2" aria-expanded="true" aria-controls="panelsStayOpen-collapse2">
+                    <button class="accordion-button collapsed bg-secondary bg-opacity-25 " type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapse2" aria-expanded="true" aria-controls="panelsStayOpen-collapse2">
                         <div class="d-flex flex-column">
                             <div class="container">
                                 <img src="res/bicycle.svg">
@@ -145,31 +145,31 @@
                 <div id="panelsStayOpen-collapse2" class="accordion-collapse collapse show" aria-labelledby="panelsStayOpen-heading2">
                     <div class="accordion-body">
                         <ul class="list-group">
-                            <a href="#" class="list-group-item list-group-item-action list-group-item-secondary" aria-current="false">
+                            <a href="#" class="list-group-item list-group-item-action " aria-current="false">
                                 <div class="ms-2 me-auto">
                                     <div class="fw-bold">Lesson 1</div>
                                     The story about my life
                                 </div>
                             </a>
-                            <a href="#" class="list-group-item list-group-item-action list-group-item-secondary" aria-current="false">
+                            <a href="#" class="list-group-item list-group-item-action " aria-current="false">
                                 <div class="ms-2 me-auto">
                                     <div class="fw-bold">Lesson 2</div>
                                     Convection
                                 </div>
                             </a>
-                            <a href="#" class="list-group-item list-group-item-action list-group-item-secondary" aria-current="false">
+                            <a href="#" class="list-group-item list-group-item-action " aria-current="false">
                                 <div class="ms-2 me-auto">
                                     <div class="fw-bold">Lesson 3</div>
                                     Real estimable
                                 </div>
                             </a>
-                            <a href="#" class="list-group-item list-group-item-action list-group-item-secondary" aria-current="false">
+                            <a href="#" class="list-group-item list-group-item-action " aria-current="false">
                                 <div class="ms-2 me-auto">
                                     <div class="fw-bold">Lesson 4</div>
                                     Private conversation
                                 </div>
                             </a>
-                            <a href="#" class="list-group-item list-group-item-action list-group-item-secondary" aria-current="false">
+                            <a href="#" class="list-group-item list-group-item-action " aria-current="false">
                                 <div class="ms-2 me-auto">
                                     <div class="fw-bold">Lesson 5</div>
                                     No one know who
@@ -182,7 +182,7 @@
 
             <div class="accordion-item mt-2">
                 <h2 class="accordion-header" id="panelsStayOpen-heading4">
-                    <button class="accordion-button collapsed" style="background-color: #E66F55;" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapse4" aria-expanded="true" aria-controls="panelsStayOpen-collapse4">
+                    <button class="accordion-button collapsed bg-secondary bg-opacity-25 " type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapse4" aria-expanded="true" aria-controls="panelsStayOpen-collapse4">
                         <div class="d-flex flex-column">
                             <div class="container">
                                 <img src="res/book.svg">
@@ -199,31 +199,31 @@
                 <div id="panelsStayOpen-collapse4" class="accordion-collapse collapse show" aria-labelledby="panelsStayOpen-heading4">
                     <div class="accordion-body">
                         <ul class="list-group ">
-                            <a href="#" class="list-group-item list-group-item-action list-group-item-secondary" aria-current="false">
+                            <a href="#" class="list-group-item list-group-item-action " aria-current="false">
                                 <div class="ms-2 me-auto">
                                     <div class="fw-bold">Lesson 1</div>
                                     The story about my life
                                 </div>
                             </a>
-                            <a href="#" class="list-group-item list-group-item-action list-group-item-secondary" aria-current="false">
+                            <a href="#" class="list-group-item list-group-item-action " aria-current="false">
                                 <div class="ms-2 me-auto">
                                     <div class="fw-bold">Lesson 2</div>
                                     Convection
                                 </div>
                             </a>
-                            <a href="#" class="list-group-item list-group-item-action list-group-item-secondary" aria-current="false">
+                            <a href="#" class="list-group-item list-group-item-action " aria-current="false">
                                 <div class="ms-2 me-auto">
                                     <div class="fw-bold">Lesson 3</div>
                                     Real estimable
                                 </div>
                             </a>
-                            <a href="#" class="list-group-item list-group-item-action list-group-item-secondary" aria-current="false">
+                            <a href="#" class="list-group-item list-group-item-action " aria-current="false">
                                 <div class="ms-2 me-auto">
                                     <div class="fw-bold">Lesson 4</div>
                                     Private conversation
                                 </div>
                             </a>
-                            <a href="#" class="list-group-item list-group-item-action list-group-item-secondary " aria-current="false">
+                            <a href="#" class="list-group-item list-group-item-action  " aria-current="false">
                                 <div class="ms-2 me-auto">
                                     <div class="fw-bold">Lesson 5</div>
                                     No one know who
