--- a/grammar.html
+++ b/grammar.html
@@ -69,7 +69,7 @@
         </p>
     </div>
 
-    <div class="container p-3 rounded-3" style="background-color: #F2B705;">
+    <div class="container p-3 rounded-3  border-start border-warning border-4">
 
         <div class="accordion accordion-flush"  id="accordionPanelsStayOpenExample">
 
