--- a/listerning.html
+++ b/listerning.html
@@ -68,7 +68,7 @@
         </p>
     </div>
 
-    <div class="container p-3 rounded-3" style="background-color: #025939">
+    <div class="container p-3 rounded-3 border-start border-success border-4" >
 
         <div class="accordion accordion-flush" id="accordionPanelsStayOpenExample">
 
