--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                     <p>
                         <a class="btn btn-outline-warning" data-bs-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">
 
-                            <img src="res/arrow-down-circle.svg">
+                            <img src="res/caret-down.svg">
                         </a>
                     </p>
                     <p>
@@ -262,7 +262,7 @@
                 <div class="container d-flex flex-row justify-content-between ">
                     <p>
                         <a class="btn btn-outline-success" data-bs-toggle="collapse" href="#collapseExample2" role="button" aria-expanded="false" aria-controls="collapseExample2">
-                            <img src="res/arrow-down-circle.svg">
+                            <img src="res/caret-down.svg">
                         </a>
                     </p>
                     <p>
