--- a/grammar.html
+++ b/grammar.html
@@ -69,7 +69,7 @@
         </p>
     </div>
 
-    <div class="container p-3 rounded-3  border border-warning border-4 w-75">
+    <div class="container p-3 rounded-3  border-top  border-warning border-1">
 
         <div class="accordion accordion-flush"  id="accordionPanelsStayOpenExample">
 
