--- a/listerning.html
+++ b/listerning.html
@@ -68,7 +68,7 @@
         </p>
     </div>
 
-    <div class="container p-3 rounded-3 border border-success border-4 w-75" >
+    <div class="container p-3 border-top border-success border-1" >
 
         <div class="accordion accordion-flush" id="accordionPanelsStayOpenExample">
 
