--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                             <a class="nav-link" href="#">News</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Article</a>
+                            <a class="nav-link" href="article.html">Article</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#">About us</a>
@@ -70,9 +70,15 @@
                             <img src="res/caret-down.svg">
                         </a>
                     </p>
-                    <p>
-                    <a class="btn btn-lg  btn-warning" href="grammar.html">start</a>
-                    </p>
+                    <div class="btn-group">
+                        <a class="btn btn-lg  btn-warning" href="grammar.html">
+                            start
+                        </a>
+                        <a class="btn btn-lg btn-outline-warning" href="grammar.html">
+                            <img src="res/arrow-right-square.svg">
+                        </a>
+                    </div>
+                    
                 </div>
 
                 <div class="collapse" id="collapseExample">
@@ -265,9 +271,15 @@
                             <img src="res/caret-down.svg">
                         </a>
                     </p>
-                    <p>
-                        <a class="btn btn-lg btn-success" href="listerning.html">start</a>
-                    </p>
+                    <div class="btn-group">
+                        <a class="btn btn-lg btn-success" href="listerning.html">
+                            start
+                        </a>
+                        <a class="btn btn-lg btn-outline-success" href="listerning.html">
+                            <img src="res/arrow-right-square.svg">
+                        </a>
+                    </div>
+
                 </div>
                 <div class="collapse" id="collapseExample2">
                     <div class="container">
@@ -455,7 +467,7 @@
             <ul class="nav justify-content-center border-bottom pb-3 mb-3">
                 <li class="nav-item"><a href="index.html" class="nav-link px-2 text-muted">Home</a></li>
                 <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">News</a></li>
-                <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Articles</a></li>
+                <li class="nav-item"><a href="article.html" class="nav-link px-2 text-muted">Articles</a></li>
                 <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">About us</a></li>
 
             </ul>
