--- a/grammar.html
+++ b/grammar.html
@@ -30,7 +30,7 @@
                         <a class="nav-link" href="#">News</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Article</a>
+                        <a class="nav-link" href="article.html">Article</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">About us</a>
@@ -253,7 +253,7 @@
             <ul class="nav justify-content-center border-bottom pb-3 mb-3">
                 <li class="nav-item"><a href="index.html" class="nav-link px-2 text-muted">Home</a></li>
                 <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">News</a></li>
-                <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Articles</a></li>
+                <li class="nav-item"><a href="article.html" class="nav-link px-2 text-muted">Articles</a></li>
                 <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">About us</a></li>
 
             </ul>
