--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                             <a class="nav-link" href="article.html">Article</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">About us</a>
+                            <a class="nav-link" href="aboutus.html">About us</a>
                         </li>
                     </ul>
                     <div class="d-flex">
@@ -67,16 +67,19 @@
                     <p>
                         <a class="btn btn-outline-warning" data-bs-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">
 
-                            <img src="res/caret-down.svg">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-caret-down-fill" viewBox="0 0 16 16">
+                                <path d="M7.247 11.14 2.451 5.658C1.885 5.013 2.345 4 3.204 4h9.592a1 1 0 0 1 .753 1.659l-4.796 5.48a1 1 0 0 1-1.506 0z"/>
+                            </svg>
                         </a>
                     </p>
                     <div class="btn-group">
                         <a class="btn btn-lg  btn-warning" href="grammar.html">
                             start
+                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-chevron-right" viewBox="0 0 16 16">
+                                <path fill-rule="evenodd" d="M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708z"/>
+                            </svg>
                         </a>
-                        <a class="btn btn-lg btn-outline-warning" href="grammar.html">
-                            <img src="res/arrow-right-square.svg">
-                        </a>
+
                     </div>
                     
                 </div>
@@ -268,16 +271,19 @@
                 <div class="container d-flex flex-row justify-content-between ">
                     <p>
                         <a class="btn btn-outline-success" data-bs-toggle="collapse" href="#collapseExample2" role="button" aria-expanded="false" aria-controls="collapseExample2">
-                            <img src="res/caret-down.svg">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-caret-down-fill" viewBox="0 0 16 16">
+                                <path d="M7.247 11.14 2.451 5.658C1.885 5.013 2.345 4 3.204 4h9.592a1 1 0 0 1 .753 1.659l-4.796 5.48a1 1 0 0 1-1.506 0z"/>
+                            </svg>
                         </a>
                     </p>
                     <div class="btn-group">
                         <a class="btn btn-lg btn-success" href="listerning.html">
                             start
+                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-chevron-right" viewBox="0 0 16 16">
+                                <path fill-rule="evenodd" d="M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708z"/>
+                            </svg>
                         </a>
-                        <a class="btn btn-lg btn-outline-success" href="listerning.html">
-                            <img src="res/arrow-right-square.svg">
-                        </a>
+
                     </div>
 
                 </div>
@@ -468,7 +474,7 @@
                 <li class="nav-item"><a href="index.html" class="nav-link px-2 text-muted">Home</a></li>
                 <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">News</a></li>
                 <li class="nav-item"><a href="article.html" class="nav-link px-2 text-muted">Articles</a></li>
-                <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">About us</a></li>
+                <li class="nav-item"><a href="aboutus.html" class="nav-link px-2 text-muted">About us</a></li>
 
             </ul>
             <p class="text-center text-muted">&copy; 2022 Easy Everyday English</p>
