--- a/news.html
+++ b/news.html
@@ -10,7 +10,7 @@
 <body style="background-color: #F2F2F2;">
 
 <header>
-    <nav class="navbar navbar-expand-md fixed-top navbar-dark bg-dark">
+    <nav class="navbar navbar-expand-md fixed-top navbar-dark bg-dark" >
         <div class="container-fluid">
             <a class="navbar-brand" href="index.html">
                 <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor" class="bi bi-explicit text-warning" viewBox="0 0 16 16">
@@ -30,10 +30,10 @@
                         <a class="nav-link " href="index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="news.html">News</a>
+                        <a class="nav-link active" href="news.html">News</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="article.html">Article</a>
+                        <a class="nav-link" href="article.html">Article</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="aboutus.html">About us</a>
@@ -54,6 +54,7 @@
                             <path d="M2 2a2 2 0 0 1 2-2h8a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V2zm2-1a1 1 0 0 0-1 1v12a1 1 0 0 0 1 1h8a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1H4z"/>
                         </svg>
                     </a>
+
                 </div>
 
             </div>
@@ -63,63 +64,11 @@
 
 <main class="container">
 
-    <div class="container2 text-center">
-        <h1 class="mt-2 mb-3 display-1 ">Articles</h1>
+    <div class="container2">
+        <h1 class="text-center display-1">News</h1>
     </div>
-    <div class="container ">
-        <div class="row">
-            <div class="card m-4" style="width: 18rem;">
-                <img src="res/dikaia_roza_rozovyj_kust_122926_1920x1080.jpg" class="card-img-top pt-1" alt="...">
-                <div class="card-body">
-                    <h5 class="card-title">Цветы у бабушки</h5>
-                    <p class="card-text">
-                        Тут небольшое содержание статьи, я так думаю. Всякое...
-                        напишу побольше чтобы сомтрелось
-                    </p>
-                    <a href="#" class="btn btn-primary">Read more</a>
-                </div>
-            </div>
-
-            <div class="card m-4" style="width: 18rem;">
-                <img src="res/ulitsa_gorod_osen_131015_1920x1080.jpg" class="card-img-top pt-1" alt="...">
-                <div class="card-body">
-                    <h5 class="card-title">Осень в берлине</h5>
-                    <p class="card-text">Небольшой пример текста, который должен основываться на названии карточки и составлять основную часть содержимого карты.</p>
-                    <a href="#" class="btn btn-primary">Read more</a>
-                </div>
-            </div>
-
-            <div class="card m-4" style="width: 18rem;">
-                <img src="res/zima_iskusstvo_zhivopis_reka_eli_domik_belyy_50177_1920x1080.jpg" class="card-img-top pt-1" alt="...">
-                <div class="card-body">
-                    <h5 class="card-title">Зимний пейзаж</h5>
-                    <p class="card-text">Небольшой пример текста, который должен основываться на названии карточки и составлять основную часть содержимого карты.</p>
-                    <a href="#" class="btn btn-primary">Read more</a>
-                </div>
-            </div>
-
-            <div class="card m-4" style="width: 18rem;">
-                <img src="res/max.jpg" class="card-img-top pt-1" alt="...">
-                <div class="card-body">
-                    <h5 class="card-title">Красавчик</h5>
-                    <p class="card-text">Это я. Всем привет
-                    </p>
-                    <a href="#" class="btn btn-primary">Read more</a>
-                </div>
-            </div>
-        </div>
-    </div>
-
-
-
 
 </main>
-
-
-
-
-
-
 
 
 <div class="container mt-3">
