--- a/listerning.html
+++ b/listerning.html
@@ -30,7 +30,7 @@
                         <a class="nav-link " href="index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">News</a>
+                        <a class="nav-link" href="news.html">News</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="article.html">Article</a>
@@ -268,7 +268,7 @@
         <footer class="py-3 my-4">
             <ul class="nav justify-content-center border-bottom pb-3 mb-3">
                 <li class="nav-item"><a href="index.html" class="nav-link px-2 text-muted">Home</a></li>
-                <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">News</a></li>
+                <li class="nav-item"><a href="news.html" class="nav-link px-2 text-muted">News</a></li>
                 <li class="nav-item"><a href="article.html" class="nav-link px-2 text-muted">Articles</a></li>
                 <li class="nav-item"><a href="aboutus.html" class="nav-link px-2 text-muted">About us</a></li>
 
