--- a/aboutus.html
+++ b/aboutus.html
@@ -62,7 +62,19 @@
 </header>
 
 <main class="container ">
-    <div class="container2 text-center">
+
+    <div class="container2">
+        <div class="container">
+            <nav style="--bs-breadcrumb-divider: '>';" aria-label="breadcrumb">
+                <ol class="breadcrumb">
+                    <li class="breadcrumb-item"><a href="index.html">Home</a></li>
+                    <li class="breadcrumb-item active" aria-current="page">About us</li>
+                </ol>
+            </nav>
+        </div>
+    </div>
+
+    <div class="container text-center">
         <h1 class="mt-2 mb-3 display-1 ">About us</h1>
     </div>
 
