--- a/news.html
+++ b/news.html
@@ -65,6 +65,17 @@
 <main class="container">
 
     <div class="container2">
+        <div class="container">
+            <nav style="--bs-breadcrumb-divider: '>';" aria-label="breadcrumb">
+                <ol class="breadcrumb">
+                    <li class="breadcrumb-item"><a href="index.html">Home</a></li>
+                    <li class="breadcrumb-item active" aria-current="page">News</li>
+                </ol>
+            </nav>
+        </div>
+    </div>
+
+    <div class="container ">
         <h1 class="text-center display-1">News</h1>
     </div>
 
